test/syc/bad/arrayfundef.c
/*
 * Function returning an array (function definition)
 */

// XXX It seems we cannot parse 'int foo(void)[2]'
typedef int aint_t[2];

aint_t foo(void)
{
}

